--- a/assets/less/backbone.ui.header.less
+++ b/assets/less/backbone.ui.header.less
@@ -1,14 +1,22 @@
-.ui-header {
-	
-	.ui-header-target {
-		background-color: red;
-		padding: 50px;
-		display: none;
-	}
-	
-	.ui-element-active {
-		display: block;
-	}
+header {
+	position: relative;
+	width: 100%;
+	height: 85px;
+	padding: 10px 5px;
+	-webkit-transition: ease-in-out .3s;
+	-moz-transition: ease-in-out .3s;
+	-ms-transition: ease-in-out .3s;
+	-o-transition: ease-in-out .3s;
+	transition: ease-in-out .3s;
+}
+
+header.hscroll {
+	position: fixed;
+	height: 40px;
+	z-index: 1111;
+	background-color: #36F;
+	background-color: rgba(0, 0, 0, .5);
+	padding-top: 8px;
 }
 
 
