--- a/assets/less/backbone.ui.header.less
+++ b/assets/less/backbone.ui.header.less
@@ -1,22 +1,57 @@
 header {
-	position: relative;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 900;
 	width: 100%;
-	height: 85px;
-	padding: 10px 5px;
-	-webkit-transition: ease-in-out .3s;
-	-moz-transition: ease-in-out .3s;
-	-ms-transition: ease-in-out .3s;
-	-o-transition: ease-in-out .3s;
-	transition: ease-in-out .3s;
+	height: 60px;
+	background: #fff;
+	color: #299bc9;
+	-webkit-transform: translate(0,0);
+	-moz-transform: translate(0,0);
+	-ms-transform: translate(0,0);
+	-o-transform: translate(0,0);
+	transform: translate(0,0);
+	-webkit-transition: -webkit-transform .5s .5s,background .5s,color .1s;
+	-moz-transition: -moz-transform .5s .5s,background .5s,color .1s;
+	-o-transition: -o-transform .5s .5s,background .5s,color .1s;
+	transition: transform .5s .5s,background .5s,color .1s;
 }
 
-header.hscroll {
+
+header.detatch {
 	position: fixed;
-	height: 40px;
-	z-index: 1111;
-	background-color: #36F;
-	background-color: rgba(0, 0, 0, .5);
-	padding-top: 8px;
+	height: 60px;
+	background: #fff;
+	color: #299bc9;
+	-webkit-transition: -webkit-transform .1s,background .1s,color .1s;
+	-moz-transition: -moz-transform .1s,background .1s,color .1s;
+	-o-transition: -o-transform .1s,background .1s,color .1s;
+	transition: transform .1s,background .1s,color .1s;
 }
 
+header.hide {
+	opacity: 0;
+	-webkit-transform: translate(0,-60px);
+	-moz-transform: translate(0,-60px);
+	-ms-transform: translate(0,-60px);
+	-o-transform: translate(0,-60px);
+	transform: translate(0,-60px);
+	-webkit-transition: -webkit-transform .2s,background .3s,color .3s,opacity 0 .3s;
+	-moz-transition: -moz-transform .2s,background .3s,color .3s,opacity 0 .3s;
+	-o-transition: -o-transform .2s,background .3s,color .3s,opacity 0 .3s;
+	transition: transform .2s,background .3s,color .3s,opacity 0 .3s;
+}
 
+header.visible {
+	opacity: 1;
+	-webkit-transform: translate(0,0);
+	-moz-transform: translate(0,0);
+	-ms-transform: translate(0,0);
+	-o-transform: translate(0,0);
+	transform: translate(0,0);
+	-webkit-transition: -webkit-transform .2s,background .3s,color .3s;
+	-moz-transition: -moz-transform .2s,background .3s,color .3s;
+	-o-transition: -o-transform .2s,background .3s,color .3s;
+	transition: transform .2s,background .3s,color .3s;
+}
